--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-				<h1 id="logo"><a href="/">BetterLegal/a></h1>
+				<h1 id="logo"><a href="/">BetterLegal</a></h1>
 				<nav id="nav">
 					<ul>
 						<!--
@@ -25,7 +25,8 @@
 							</ul>
 						</li>
 					-->
-						<li><a href="#" class="button special">Create a Texas LLC</a></li>
+						<li><a href="#" class="button special">Single Member Texas LLC</a></li>
+						<li><a href="#" class="button special">Multi Member Texas LLC</a></li>
 					</ul>
 				</nav>
 			</header>
