--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,13 +25,13 @@
 							</ul>
 						</li>
 					-->
-						<li><a class="typeform-share button special" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
+						<li><a class="typeform-share link button special" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
 						<li><a href="#" class="button special">Multi Member Texas LLC</a></li>
 					</ul>
 				</nav>
 
 
-			
+
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
 			</header>
