--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 							</ul>
 						</li>
 					-->
-						<li><a class="typeform-share link button special" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
+						<li><a class="typeform-share button special" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
 						<li><a href="#" class="button special">Multi Member Texas LLC</a></li>
 					</ul>
 				</nav>
