--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,10 +14,10 @@
         </header>
         <p>Create an LLC in <strong>15 minutes</strong> for <strong>$299</strong> 
         <br />
-        and have it filed with the State of Texas next day.
+        and have it filed with the <strong>State of Texas</strong> next day.
         <footer>
             <ul class="buttons vertical">
-                <li><a href="#main" class="button fit scrolly">Get Started Now</a></li>
+                <li><a href="#main" class="button fit scrolly">How We Compare</a></li>
             </ul>
         </footer>
 
