--- a/css/style.css
+++ b/css/style.css
@@ -949,7 +949,7 @@
 
 /* Layer */
 
-	#topButton .toggle {
+#topButton .toggle {
 		height: 100%;
 		left: 0;
 		position: absolute;
@@ -970,27 +970,26 @@
 		#topButton .toggle:before {
 			color: white;
 			content: '\f039';
-			font-size: 0.75em;
-			height: 30px;
-			left: 0;
-			line-height: 30px;
+			font-size: 1em;
+			height: 40px;
+			left: 10px;
+			line-height: 40px;
 			opacity: 0.5;
 			position: absolute;
-			top: 0;
-			width: 100%;
+			top: 11px;
+			width: 60px;
 			z-index: 1;
 		}
 
 		#topButton .toggle:after {
 			background: rgba(163, 169, 170, 0.75);
-			border-radius: 0 0 4px 4px;
+			border-radius: 2px;
 			content: '';
-			height: 30px;
-			left: 50%;
-			margin-left: -40px;
+			height: 40px;
+			left: 10px;
 			position: absolute;
-			top: 0;
-			width: 80px;
+			top: 10px;
+			width: 60px;
 		}
 
 	#sideButton .toggle {
