--- a/css/style.css
+++ b/css/style.css
@@ -972,7 +972,7 @@
 			content: '\f039';
 			font-size: 1em;
 			height: 40px;
-			left: 10px;
+			right: 10px;
 			line-height: 40px;
 			opacity: 0.5;
 			position: absolute;
@@ -986,7 +986,7 @@
 			border-radius: 2px;
 			content: '';
 			height: 40px;
-			left: 10px;
+			right: 10px;
 			position: absolute;
 			top: 10px;
 			width: 60px;
