Add background to nav buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2224,6 +2224,7 @@
 
 				#header nav ul li a {
 					border: solid 1px transparent;
+					background: #83d3c9;
 					color: inherit;
 					display: inline-block;
 					line-height: 1em;
