Adding weight to nav font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2226,6 +2226,7 @@
 					border: solid 1px transparent;
 					background: #83d3c9;
 					color: inherit;
+					font-weight: 900;
 					display: inline-block;
 					line-height: 1em;
 					padding: 0.6em 0.75em;
