Fix banner background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2398,6 +2398,8 @@
 		background-attachment: scroll, scroll, scroll, fixed;
 		background-color: #645862;
 		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
+		background-position:top left, top center;
+		background-repeat: repeat, no-repeat;
 		background-size: 25em, 25em, auto, cover;
 		color: #fff;
 		cursor: default;
