--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2395,7 +2395,7 @@
 	}
 
 	#banner {
-		background-attachment: scroll, scroll, scroll, fixed;
+		background-attachment: scroll, fixed;
 		background-color: #645862;
 		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
 		background-position:top left, top center;
