--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2107,10 +2107,6 @@
 
 		.wrapper.style2 {
 			background-color: #83d3c9;
-			background-image: url("images/light-bl.svg"), url("images/light-br.svg");
-			background-position: bottom left, bottom right;
-			background-repeat: no-repeat, no-repeat;
-			background-size: 25em, 25em;
 			color: #fff;
 		}
 
@@ -2490,9 +2486,12 @@
 /* CTA */
 
 	#cta {
-		background-attachment: scroll, scroll, scroll, fixed;
+		background-attachment: fixed;
 		background-color: #645862;
-		background-size: 25em, 25em, auto, cover;
+		background-position: bottom center;
+ 		background-repeat: no-repeat;
+ 		background-image: url("../../images/banner.jpg");
+		background-size: cover;
 		color: #fff;
 		padding: 5em;
 		text-align: center;
