--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3108,13 +3108,13 @@
 
 				.wrapper.style4 {
 					background-size: 10em;
-					padding: 1.5em 1.5em 3em 1.5em;
+					padding: 3em 1.5em;
 				}
 
 		/* Banner */
 
 			#banner {
-				background-size: 10em, 10em, auto, cover;
+				background-size: auto, cover;
 				padding: 6em 0;
 			}
 
@@ -3140,11 +3140,11 @@
 
 			#main {
 				background-size: 10em;
-				padding: 3.5em 0 2.5em 0;
+				padding: 2.5em 0;
 			}
 
 			body.index #main {
-				padding: 2.5em 0 0 0;
+				padding: 0 0;
 			}
 
 			body.contact #main {
@@ -3154,7 +3154,7 @@
 		/* CTA */
 
 			#cta {
-				background-size: 10em, 10em, auto, cover;
+				background-size: auto, cover;
 				padding: 3em 1.5em;
 			}
 
